--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "next": "15.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
